2009-08-12  Milan Zamazal  <pdm@brailcom.org>

	* db/db_pytis_menu.py:
	* defs/menu.py:
	Display relevant and only relevant rows in DMP sideforms.

2009-08-11  Milan Zamazal  <pdm@brailcom.org>

	* db/db_pytis_menu.py:
	Don't include e_pytis_menu in ev_pytis_summary_rights_raw.

2009-08-11  Milan Zamazal  <pdm@brailcom.org>

	* db/db_pytis_menu.py:
	Bind a_pytis_actions_structure to e_pytis_menu by menuid in ev_pytis_menu_rights.

2009-08-11  Milan Zamazal  <pdm@brailcom.org>

	* defs/menu.py:
	Minor typo fix in a form label.

2009-08-11  Milan Zamazal  <pdm@brailcom.org>

	* tools/genmenu.py:
	Don't store duplicate access rights in genmenu.

2009-08-10  Milan Zamazal  <pdm@brailcom.org>

	* db/db_pytis_menu.py:
	Limit rights of multiforms in pytis_update_summary_rights.

2009-08-10  Milan Zamazal  <pdm@brailcom.org>

	* defs/menu.py:
	Amend: yes.
	Improvements of ApplicationMenuRights columns
	
	

2009-08-10  Milan Zamazal  <pdm@brailcom.org>

	* defs/menu.py:
	Improvements of ApplicationMenuRights columns.

2009-08-10  Milan Zamazal  <pdm@brailcom.org>

	* db/db_pytis_menu.py:
	* lib/pytis/form/screen.py:
	Add multiforms to DMP menu structure.

2009-08-07  Milan Zamazal  <pdm@brailcom.org>

	* db/db_pytis_menu.py:
	* defs/menu.py:
	* lib/pytis/form/application.py:
	* lib/pytis/presentation/spec.py:
	* tools/genmenu.py:
	DMP: Don't use ambigous column names `name' and `action' anymore.
	

2009-08-07  Milan Zamazal  <pdm@brailcom.org>

	* db/db_pytis_menu.py:
	* defs/menu.py:
	DMP data model generalized to work on all actions, not only menu actions.

2009-07-28  Milan Zamazal  <pdm@brailcom.org>

	* db/db_pytis_menu.py:
	* defs/menu.py:
	* lib/pytis/form/application.py:
	* tools/genmenu.py:
	Initial steps towards foldable DMP.

2009-07-28  Milan Zamazal  <pdm@brailcom.org>

	* lib/pytis/form/list.py:
	Disable folding on any user sorting, not on other than initial.

2009-07-28  Milan Zamazal  <pdm@brailcom.org>

	* lib/pytis/form/list.py: