@@ -1,6 +1,11 @@
 2009-08-12  Milan Zamazal  <pdm@brailcom.org>
 
 	* db/db_pytis_menu.py:
+	Limit only view rights of forms with subforms.
+
+2009-08-12  Milan Zamazal  <pdm@brailcom.org>
+
+	* db/db_pytis_menu.py:
 	* defs/menu.py:
 	Display relevant and only relevant rows in DMP sideforms.
 
